updated padding on hero image text as didn't display on mobile correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ body {
 }
 
 .hero-image-text {
-  padding-top: 150px;
+  padding-top: 75px;
   padding-left: 30px;
   font-size: 300%;
   color: #f2bd1d;
